@@ -2,7 +2,7 @@
  **  pmix_client.h - PMIx client communication code
  *****************************************************************************
  *  Copyright (C) 2014-2015 Artem Polyakov. All rights reserved.
- *  Copyright (C) 2015      Mellanox Technologies. All rights reserved.
+ *  Copyright (C) 2015-2020 Mellanox Technologies. All rights reserved.
  *  Written by Artem Polyakov <artpol84@gmail.com, artemp@mellanox.com>.
  *
  *  This file is part of Slurm, a resource management program.
@@ -107,5 +107,6 @@ uint32_t pmixp_lib_get_version(void);
 int pmixp_lib_fence(const pmixp_proc_t procs[], size_t nprocs,
 		    bool collect, char *data, size_t ndata,
 		    void *cbfunc, void *cbdata);
+extern int pmixp_lib_abort(int status, void *cbfunc, void *cbdata);
 
 #endif /* PMIXP_CLIENT_H */
